--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc --watch",
     "dev": "node dist/index.js",
     "new": "node script/new.js",
-    "patch": "script/patch.sh"
+    "patch": "script/patch.sh",
+    "cc": "emcc c/index.c c/tiamalgamation.c -o dist/index.html"
   },
   "license": "MIT",
   "private": false,
