--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "patch": "script/patch.sh",
     "cc": "script/cc.sh",
     "cprint": "script/cprint.sh",
+    "rc": "script/rc.sh && dist/test",
     "print": "npm run cprint && dist/print",
     "serve": "cd dist && live-server"
   },
