--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "18.16.1",
     "dayjs": "1.11.9",
     "global-agent": "3.0.0",
+    "litebot": "^0.2.40",
     "live-server": "^1.2.2",
     "typescript": "5.1.6"
   }
