--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "global-agent": "3.0.0",
     "litebot": "^0.2.40",
     "live-server": "^1.2.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "webpack": "^5.88.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
